# secure-software-development-with-rust

./: README.md
command_injection/: Cargo.toml  Makefile
command_injection/custom_commands/: myutility.sh
command_injection/src/: main.rs  secure.rs  shared.rs  vulnerable.rs
command_injection/test-folder/: file.txt
cyclic-reference/: Cargo.toml
cyclic-reference/src/: main.rs
integer_overflow/: Cargo.toml
integer_overflow/src/: main.rs  vulnerable.rs
resource-leakage/: Cargo.toml
resource-leakage/src/: main.rs
rl/: .gitignore  Cargo.toml  a.out  tem.c  test.txt
rl/src/: secure.rs  vulnerable.rs
sql_injection/: Cargo.toml
sql_injection/src/: common.rs  main.rs  secure.rs  vulnerable.rs
time_of_check_time_of_use/: Cargo.toml
time_of_check_time_of_use/src/: common.rs  secure.rs  vulnerable.rs
toctou/: Cargo.toml  attacker.py  sensitive.txt
toctou/src/: main.rs
