[package]
name = "command_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shell-escape = "0.1.5"

[lib]
path = "src/shared.rs"



[[bin]]
name = "secure"
path = "src/secure.rs"

[[bin]]
name = "vulnerable"
path = "src/vulnerable.rs"
