[package]
name = "sql_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusqlite = { version = "0.29.0", features = ["bundled"] }

[lib]
path = "src/common.rs"

[[bin]]
name = "secure"
path = "src/secure.rs"

[[bin]]
name = "vulnerable"
path = "src/vulnerable.rs"
